order previous/next outputs by coordinates

BUG: 451286
BUG: 450903